linked navigation and inserted background pics

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
     <header>
         <h1>Qing Zou</h1>
         <ul class='navigation'>
-            <li>
-                <a href="">About Me</a>
-                <a href="">Work</a>
-                <a href="">Contact Me</a>
-                <a href="">Resume</a>
-            </li>
+                <a href="#about-me">About Me</a>
+                <a href="#works">Work</a>
+                <a href="#contact-me">Contact Me</a>
+                <a href="https://docs.google.com/document/d/1E6ByIcQXURQQ5Wrx-CgrZnqtl43QwIT9teEDg112qLU/edit?usp=sharing">Resume</a>
+           
         </ul>
     </header>
     <img class="hero" src="./assets/images/helloKitty2.jpeg" alt="Image Cannot Be Shown">
-    <section>  
+    <section id="about-me">  
         <h1 class='section-title'>About Me</h1>
         <p>I am a senior at Georgia Institute of Technology. I double-majored in biomedical
             engineering and psychology. I am very much certain that BME is what I want to pursue. It probably
@@ -37,9 +36,19 @@
             precision and pragmaticism. My experience in psychology taught me that I have made the right
             choice in pursuing biomedical engineering.</p>
     </section>
-    <section>
+    <section id="works">
         <h1 class='section-title'>Work</h1>
         <ul class="works-list">
+            <li id="main-project">
+                <div>
+                    <h2>
+                        Main Project
+                    </h2>
+                    <h3>
+                        JS/Node
+                    </h3>
+                </div>
+            </li>
             <li>
                 <div>
                     <h2>
@@ -82,13 +91,21 @@
             </li>
         </ul>
     </section>
-    <section >
+    <section id="contact-me" >
         <h1 class='section-title'>Contact Me</h1>
         <ul>
             <li>678.756.2993</li>
             <li>qzou3@g.ucla.edu</li>
-            <li>GitHub</li>
-            <li>Linkedin</li>
+            <li>
+                <a href="https://github.com/qzou39">
+                    GitHub
+                </a>    
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/qing-zou-46a9b91bb/">
+                    Linkedin
+                </a>
+            </li>
         </ul>
     </section>
     
