--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         <ul class="works-list">
             <li id="main-project">
                 <div>
-                    <h2>
-                        Main Project
-                    </h2>
+                    <a href="https://jonzyuen.github.io/Project_1_Business_Factory/">
+                        <h2>
+                            GameBase Project
+                        </h2>
+                    </a>
                     <h3>
                         JS/Node
                     </h3>
